// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImportGenerator > should generate correct import statements for given schemas 1`] = `
"// @ts-nocheck
// This file is generated by @zgdb/zg. Do not edit it manually.
// TODO: Generate based on the user's config
import { ZgDatabase, ZgBaseNode, ZgAuthContext, EntityCollection } from '@zgdb/client';
import { Builder, ByteBuffer } from 'flatbuffers';
import * as UserFB from './schema/user.js';
import * as PostFB from './schema/post.js';
"
`;

exports[`ImportGenerator > should use the specified import extension 1`] = `
"// @ts-nocheck
// This file is generated by @zgdb/zg. Do not edit it manually.
// TODO: Generate based on the user's config
import { ZgDatabase, ZgBaseNode, ZgAuthContext, EntityCollection } from '@zgdb/client';
import { Builder, ByteBuffer } from 'flatbuffers';
import * as ProductFB from './schema/product.mjs';
"
`;
